src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #000000;
  --foreground: #ffffff;
}

html {
  -webkit-text-size-adjust: 100%;
}

body {
  color: var(--foreground);
  background: var(--background);
  font-synthesis-weight: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@layer utilities {
  .scroll-sm-120 {
    scroll-margin-bottom: 120px;
  }
}

